--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,24 @@
       href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700"
       rel="stylesheet"
     />
+
+    <link href="%PUBLIC_URL%/assets/css/bootstrap.css" rel="stylesheet" />
+
+    <link
+      href="%PUBLIC_URL%/assets/css/font-awesome.min.css"
+      rel="stylesheet"
+    />
+
+    <link href="%PUBLIC_URL%/assets/css/colors.css" rel="stylesheet" />
+
     <title>React Blog</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="%PUBLIC_URL%/assets/js/jquery.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/tether.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/bootstrap.min.js"></script>
+    <!-- <script src="%PUBLIC_URL%/assets/js/custom.js"></script> -->
   </body>
 </html>
